--- a/Assignments/Team Leader- Priyadharshini.M/Assignment 3/2,3.Bucket(upload)/Templates/index.html
+++ b/Assignments/Team Leader- Priyadharshini.M/Assignment 3/2,3.Bucket(upload)/Templates/index.html
@@ -10,25 +10,13 @@
    <head>
       <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
    </head>
-   <body>
+   <body align="center">
       {% for row in files %}
          <div style="border: 1px solid #EFEFEF;margin:10px;">
             <h3>Filename : {{row}} </h3>
-            <img src="https://flask-test.s3.jp-tok.cloud-object-storage.appdomain.cloud/{{row}}" width="150px"></td>
+            <img src="https://bucket04.s3.jp-tok.cloud-object-storage.appdomain.cloud/{{row}}" width="150px"></td>
          </div>
       {% endfor %}
-      <script>
-         window.watsonAssistantChatOptions = {
-           integrationID: "8294a8a4-9e3c-47d8-9478-515fb63886ef", // The ID of this integration.
-           region: "jp-tok", // The region your integration is hosted in.
-           serviceInstanceID: "d065dad5-24d1-4292-b122-007bd6dffcad", // The ID of your service instance.
-           onLoad: function(instance) { instance.render(); }
-         };
-         setTimeout(function(){
-           const t=document.createElement('script');
-           t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
-           document.head.appendChild(t);
-         });
-       </script>
+
    </body>
 </html>
