--- a/Assignments/Team Leader- Priyadharshini.M/Assignment 3/2,3.Bucket(upload)/Templates/delete.html
+++ b/Assignments/Team Leader- Priyadharshini.M/Assignment 3/2,3.Bucket(upload)/Templates/delete.html
@@ -1,6 +1,8 @@
-
 <html>
-   <body>
+ <head>
+      <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+   </head>
+   <body align="center">
 
 	<a href="/">HOME</a>
 	<a href="/uploader">Upload </a>
@@ -9,8 +11,8 @@
 
 <h1>IBM Object Storage</h1>
 
-      <form action = "/deletefile" method = "POST" >
-   
+      <form action = "/deletefile" align="center" method = "POST" >
+
 		 <input type = "text" placeholder="Enter bucket name" name = "bucket" />
 		 <br>
 		 <br>
@@ -18,6 +20,6 @@
 		 <br>
 		 <br>
          <input type = "submit"/>
-      </form>   
+      </form>
    </body>
 </html>
