--- a/Assignments/Team Leader- Priyadharshini.M/Assignment 3/2,3.Bucket(upload)/Templates/index.html
+++ b/Assignments/Team Leader- Priyadharshini.M/Assignment 3/2,3.Bucket(upload)/Templates/index.html
@@ -17,6 +17,18 @@
             <img src="https://bucket04.s3.jp-tok.cloud-object-storage.appdomain.cloud/{{row}}" width="150px"></td>
          </div>
       {% endfor %}
-
+<script>
+  window.watsonAssistantChatOptions = {
+    integrationID: "55554398-1cea-432c-aad2-2e7814e3f920", // The ID of this integration.
+    region: "au-syd", // The region your integration is hosted in.
+    serviceInstanceID: "d98b4589-a506-4e1a-b2ed-a5c82b315182", // The ID of your service instance.
+    onLoad: function(instance) { instance.render(); }
+  };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+    document.head.appendChild(t);
+  });
+   </script>
    </body>
 </html>
