--- a/Assignments/Priyadharshini.K/Assingment3/2,3 ans/templates/index.html
+++ b/Assignments/Priyadharshini.K/Assingment3/2,3 ans/templates/index.html
@@ -1,6 +1,6 @@
-<a href="/">HOME</a>
-<a href="/uploader">Upload</a>
-<a href="/deletefile">Delete</a>
+<a href="/">HOME</a><br>
+<a href="/uploader">Upload</a><br>
+<a href="/deletefile">Delete</a><br>
 <br><hr>
 <h1>IBM Object Storage</h1>
 
@@ -10,25 +10,25 @@
    <head>
       <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
    </head>
-   <body>
+   <body align="center">
       {% for row in files %}
          <div style="border: 1px solid #EFEFEF;margin:10px;">
             <h3>Filename : {{row}} </h3>
-            <img src="https://flask-app-test.s3.jp-tok.cloud-object-storage.appdomain.cloud/{{row}}" width="150px"></td>
+            <img src="https://assbucket.s3.jp-tok.cloud-object-storage.appdomain.cloud/{{row}}" width="150px"></td>
          </div>
       {% endfor %}
-      <script>
-         window.watsonAssistantChatOptions = {
-           integrationID: "692d089f-33ef-4359-809e-9fc4b40f44ab", // The ID of this integration.
-           region: "jp-tok", // The region your integration is hosted in.
-           serviceInstanceID: "4b2e2905-8853-41d8-bcd9-f50520ca9e00", // The ID of your service instance.
-           onLoad: function(instance) { instance.render(); }
-         };
-         setTimeout(function(){
-           const t=document.createElement('script');
-           t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
-           document.head.appendChild(t);
-         });
-       </script>
+<script>
+  window.watsonAssistantChatOptions = {
+    integrationID: "0fadad16-9e92-49e6-9693-e6de04e40ca1", // The ID of this integration.
+    region: "au-syd", // The region your integration is hosted in.
+    serviceInstanceID: "4fd73f2a-8793-4211-ab2c-1cc826e989e7", // The ID of your service instance.
+    onLoad: function(instance) { instance.render(); }
+  };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+    document.head.appendChild(t);
+  });
+</script>
    </body>
 </html>
