--- a/Assignments/Team Leader- Priyadharshini.M/Assignment 4/Job Portal/Templates/home.html
+++ b/Assignments/Team Leader- Priyadharshini.M/Assignment 4/Job Portal/Templates/home.html
@@ -34,7 +34,7 @@
 }
 
 .btn{
-	 background-color: pink;
+	 background-color: blue;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -50,9 +50,11 @@
 
 </style>
 </head>
-<body>
-<h2>Job Portal</h2>
-<h1><center>Job Offer</center></h1>
+<body style="Background-color:pink">
+<center>
+<h1>Job Portal</h1><br>
+	<h1>Job Offer</h1>
+	</center>
 <div class="box1">
 	Java Developer<br>
 	Location:Chennai, TamilNadu.<br>
