--- a/Assignments/Team Leader- Priyadharshini.M/Assignment 4/Job Portal/Templates/home.html
+++ b/Assignments/Team Leader- Priyadharshini.M/Assignment 4/Job Portal/Templates/home.html
@@ -66,7 +66,7 @@
 	C Developer<br>
 	Location:Mumbai, Tamil Nadu.<br>
 	From Rs.60,000 a month<br>
-	A C Developer is a programmer who designs, develops, and manages Java-based applications and software. With most large organizations using Java to implement software systems and backend services, a Java developer is one of the most sought-after jobs today.<br><br>
+	A C Developer is a programmer who designs, develops, and manages applications and software. With most large organizations using C to implement software systems and backend services, a Java developer is one of the most sought-after jobs today.<br><br>
 	<button class="btn">Apply Now</button>
 </div>
 <div class="box3">
